// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arkit Angular2 Todo 1`] = `
Array [
  "@startuml

scale max 1920 width
top to bottom direction

skinparam monochrome true
skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 20
skinparam defaultFontName Tahoma
skinparam defaultFontSize 14
skinparam roundCorner 4
skinparam dpi 150
skinparam arrowThickness 0.7
skinparam packageTitleAlignment left

'oval
skinparam usecase {
  borderThickness 0.4
  fontSize 12
}

'rectangle
skinparam rectangle {
  borderThickness 1
}
    

rectangle \\"app.component\\" as app_component
rectangle \\"components/index\\" as components_index
rectangle \\"<b>main</b>\\" as main
rectangle \\"<b>main.bundle</b>\\" as main_bundle
rectangle \\"main.module\\" as main_module
rectangle \\"pipes/index\\" as pipes_index
rectangle \\"routes\\" as routes
rectangle \\"todo-footer.component\\" as todo_footer_component
rectangle \\"todo-header.component\\" as todo_header_component
rectangle \\"todo-item.component\\" as todo_item_component
rectangle \\"todo-list.component\\" as todo_list_component
rectangle \\"todo-store.service\\" as todo_store_service
rectangle \\"todo.model\\" as todo_model
rectangle \\"trim.pipe\\" as trim_pipe
rectangle \\"<b>webpack.config</b>\\" as webpack_config

components_index --> app_component
components_index --> todo_footer_component
components_index --> todo_header_component
components_index --> todo_item_component
components_index --> todo_list_component
main => main_module
main_module --> components_index
main_module --> pipes_index
main_module --> routes
main_module --> todo_store_service
pipes_index --> trim_pipe
routes ---> todo_list_component
todo_footer_component ----> todo_store_service
todo_header_component ----> todo_store_service
todo_list_component ----> todo_store_service
todo_store_service ---> todo_model

@enduml",
]
`;

exports[`Arkit Express 1`] = `
Array [
  "@startuml

scale max 1920 width
top to bottom direction

skinparam monochrome true
skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 20
skinparam defaultFontName Tahoma
skinparam defaultFontSize 14
skinparam roundCorner 4
skinparam dpi 150
skinparam arrowThickness 0.7
skinparam packageTitleAlignment left

'oval
skinparam usecase {
  borderThickness 0.4
  fontSize 12
}

'rectangle
skinparam rectangle {
  borderThickness 1
}
    

rectangle \\"application\\" as application
rectangle \\"<b>express</b>\\" as express
rectangle \\"init\\" as init
rectangle \\"layer\\" as layer
rectangle \\"query\\" as query
rectangle \\"request\\" as request
rectangle \\"response\\" as response
rectangle \\"route\\" as route
rectangle \\"router/index\\" as router_index
rectangle \\"utils\\" as utils
rectangle \\"view\\" as view

application --> init
application --> query
application --> router_index
application --> utils
application --> view
express => application
express ==> query
express => request
express => response
express ==> route
express ==> router_index
response --> utils
route --> layer
router_index --> layer
router_index --> route

@enduml",
]
`;

exports[`Arkit Sample 1`] = `
Array [
  "@startuml

scale max 1920 width
top to bottom direction

skinparam monochrome true
skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 20
skinparam defaultFontName Tahoma
skinparam defaultFontSize 14
skinparam roundCorner 4
skinparam dpi 150
skinparam arrowThickness 0.7
skinparam packageTitleAlignment left

'oval
skinparam usecase {
  borderThickness 0.4
  fontSize 12
}

'rectangle
skinparam rectangle {
  borderThickness 1
}
    

rectangle \\"Main\\" {
  (main.view)
  (singleton)
}

rectangle \\"Base\\" {
  (base.component)
  (component)
  (model)
}

rectangle \\"<b>main.ts</b>\\" as main_ts

(component) ..> (base.component)
main_ts ==> (main.view)
(main.view) --> (component)
(main.view) ...> (singleton)
(singleton) ---> (model)

@enduml",
  "@startuml

scale max 1920 width
top to bottom direction

skinparam monochrome true
skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 20
skinparam defaultFontName Tahoma
skinparam defaultFontSize 14
skinparam roundCorner 4
skinparam dpi 150
skinparam arrowThickness 0.7
skinparam packageTitleAlignment left

'oval
skinparam usecase {
  borderThickness 0.4
  fontSize 12
}

'rectangle
skinparam rectangle {
  borderThickness 1
}
    

rectangle \\"base.component\\" as base_component
rectangle \\"component\\" as component
rectangle \\"<b>main.ts</b>\\" as main_ts
rectangle \\"main.view\\" as main_view
rectangle \\"model\\" as model
rectangle \\"singleton\\" as singleton

component --> base_component
main_ts ==> main_view
main_view --> component
main_view ---> singleton
singleton ---> model

@enduml",
]
`;
